# MusicAnalysis

./: .gitignore  README.md  environment.yml  pyproject.toml
.venv_sys/: pyvenv.cfg
scripts/: music_cli.py  scales_blog_plots.py  scales_compare.py  scales_defects_cli.py  scales_entropy_cli.py  scales_graph_cli.py  scales_mode_equivalence_cli.py  scales_vae_cli.py
src/music_analysis/: __init__.py  cli.py  plotting.py  theory.py
